<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/feed_rss_fragment">


    <action
        android:id="@+id/to_managment"
        app:destination="@+id/managment_rss_fragment" />
    <action
        android:id="@+id/to_profile"
        app:destination="@+id/profile_fragment" />
    <action
        android:id="@+id/to_feed"
        app:destination="@+id/feed_rss_fragment" />

    <fragment
        android:id="@+id/feed_rss_fragment"
        android:name="com.albertoherjim.rssaggregator.presentation.RssFeedFragment"
        android:label="@string/feed_label"
        tools:layout="@layout/fragment_rss_feed" />

    <fragment
        android:id="@+id/managment_rss_fragment"
        android:name="com.albertoherjim.rssaggregator.presentation.RssManagmentFragment"
        android:label="@string/manage_label"
        tools:layout="@layout/fragment_rss_managment"/>

    <fragment
        android:id="@+id/profile_fragment"
        android:name="com.albertoherjim.rssaggregator.presentation.ProfileFragment"
        android:label="@string/profile_label"
        tools:layout="@layout/fragment_profile"/>

</navigation>