<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/default_margin"
    tools:context=".presentation.ProfileFragment">

    <TextView
        android:id="@+id/name"
        android:layout_width="@dimen/buttom_size_l"
        android:layout_height="@dimen/buttom_size_s"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/insert_name"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/insert_name"
        android:layout_width="@dimen/buttom_size_xxl"
        android:layout_height="@dimen/buttom_size_s"
        android:layout_marginLeft="@dimen/margin_m"
        android:hint="@string/insert_name"
        android:textSize="@dimen/text_inputh_s"
        app:layout_constraintStart_toEndOf="@+id/name"
        app:layout_constraintTop_toTopOf="parent"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/url"
        android:layout_width="@dimen/buttom_size_l"
        android:layout_height="@dimen/buttom_size_s"
        android:layout_marginTop="@dimen/margin_s"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name"
        android:text="@string/insert_url"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/insert_url"
        android:layout_width="@dimen/buttom_size_xxl"
        android:layout_height="@dimen/buttom_size_s"
        android:hint="@string/insert_url"
        android:textSize="@dimen/text_inputh_s"
        app:layout_constraintStart_toStartOf="@+id/insert_name"
        app:layout_constraintTop_toTopOf="@+id/url"
        android:textAlignment="center"/>
    
    <Button
        android:id="@+id/boton_guardar"
        android:layout_width="@dimen/buttom_size_xxl"
        android:layout_height="@dimen/buttom_size_l"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/url"
        android:layout_marginTop="@dimen/margin_s"
        android:text="@string/save"
        android:textSize="@dimen/text_size_xs"/>
    <Button
        android:id="@+id/boton_eliminar"
        android:layout_width="@dimen/buttom_size_xxl"
        android:layout_height="@dimen/buttom_size_l"
        app:layout_constraintStart_toStartOf="@+id/boton_guardar"
        app:layout_constraintTop_toBottomOf="@id/boton_guardar"
        android:layout_marginTop="@dimen/margin_s"
        android:text="@string/cancel"
        android:textSize="@dimen/text_size_xs"/>

</androidx.constraintlayout.widget.ConstraintLayout>

